--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "@typescript-eslint/parser": "^2.3.0",
     "eslint": "^6.4.0",
     "eslint-config-prettier": "^6.3.0",
+    "eslint-plugin-prettier": "^3.1.0",
     "prettier": "^1.18.2",
     "tslint": "^5.20.0",
-    "typescript": "^3.6.3",
-    "eslint-plugin-prettier": "^3.1.0"
+    "typescript": "^3.6.3"
   },
   "dependencies": {
-    "@types/node": "^12.7.5"
+    "@types/node": "^12.7.5",
+    "reflect-metadata": "^0.1.13"
   }
 }
