--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,13 @@
 {
   "outDir": "./dist",
   "build": "./dist",
+  "baseUrl": "",
   "compilerOptions": {
     "target": "ES5",
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true
   },
   "include": [
-      "TS_Lesson_1/01_hello.ts"
+    "Typescript/TS_Lesson_1/01_hello.ts"
   ]
 }
