--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "typescript": "^3.6.3"
   },
   "dependencies": {
+    "@types/faker": "^4.1.5",
     "@types/node": "^12.7.5",
+    "faker": "^4.1.0",
     "mysql": "^2.17.1",
     "reflect-metadata": "^0.1.13",
     "tsconfig-paths": "^3.9.0",
