Typeorm / Lesson 4, Express / Lesson 1

--- a/ormconfig.json
+++ b/ormconfig.json
@@ -9,7 +9,8 @@
   "entities": [
     "TypeOrm/Lesson_1/*Entity.ts",
     "TypeOrm/Lesson_2/*Entity.ts",
-    "TypeOrm/Lesson_3/*Entity.ts"
+   "TypeOrm/Lesson_3/*Entity.ts",
+    "TypeOrm/Lesson_4/*Entity.ts"
   ],
   "migrations": [
     "TypeOrm/migrations/*.ts"
