--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,9 @@
   "build": "./dist",
   "baseUrl": "",
   "compilerOptions": {
-    "target": "ES5",
+    "target": "es2016",
+    "module": "commonjs",
+    "lib": ["es2016", "esnext.asynciterable"],
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true
   },
